fixing weird overflow jum issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   --theme-color: #3500ffa3;
   --theme-text: #e1d9ff;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 h1,
